[gd_scene load_steps=2 format=3 uid="uid://d18c2gpps48r3"]

[ext_resource type="Script" uid="uid://cn1t3t6f71vvo" path="res://modules/text-editor/editor.gd" id="1_8pxw7"]

[node name="editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8pxw7")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
text = "Text Edit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Host"

[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
